(feat): ajout d'un exemple d'utilisation par défaut via le cli.